--- a/ClientAPIBOX/ObjectiveC/TWWeather/TWWeather-Info.plist
+++ b/ClientAPIBOX/ObjectiveC/TWWeather/TWWeather-Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleIconFile</key>
 	<string>Icon.png</string>
 	<key>CFBundleIdentifier</key>
-	<string>net.zonble.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>org.twbbs.zonble.TWWeather</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
