--- a/ClientAPIBOX/ObjectiveC/Widget/TWWeather.dcproj/project/widget.wdgt/WidgetPlugin.widgetplugin/Contents/Info.plist
+++ b/ClientAPIBOX/ObjectiveC/Widget/TWWeather.dcproj/project/widget.wdgt/WidgetPlugin.widgetplugin/Contents/Info.plist
@@ -5,15 +5,13 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>${EXECUTABLE_NAME}</string>
-	<key>CFBundleIconFile</key>
-	<string></string>
+	<string>WidgetPlugin</string>
 	<key>CFBundleIdentifier</key>
-	<string>net.zonble.${PRODUCT_NAME:rfc1034Identifier}</string>
+	<string>net.zonble.WidgetPlugin</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>${PRODUCT_NAME}</string>
+	<string>WidgetPlugin</string>
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
