--- a/ClientAPIBOX/ObjectiveC/TWWeather/TWWeather-Info.plist
+++ b/ClientAPIBOX/ObjectiveC/TWWeather/TWWeather-Info.plist
@@ -21,7 +21,7 @@
 	<key>CFBundleSignature</key>
 	<string>ZNBL</string>
 	<key>CFBundleVersion</key>
-	<string>2.4a</string>
+	<string>2.4</string>
 	<key>LSHasLocalizedDisplayName</key>
 	<true/>
 	<key>LSRequiresIPhoneOS</key>
