--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "ClientAPIBOX/ObjectiveC/External/facebook-iphone-sdk"]
 	path = ClientAPIBOX/ObjectiveC/External/facebook-iphone-sdk
 	url = http://github.com/facebook/facebook-iphone-sdk.git
+[submodule "ClientAPIBOX/ObjectiveC/External/ObjectivePlurk"]
+	path = ClientAPIBOX/ObjectiveC/External/ObjectivePlurk
+	url = git://github.com/zonble/ObjectivePlurk.git
+[submodule "ClientAPIBOX/ObjectiveC/External/bsjsonadditions"]
+	path = ClientAPIBOX/ObjectiveC/External/bsjsonadditions
+	url = git://github.com/blakeseely/bsjsonadditions.git
