--- a/ClientAPIBOX/ObjectiveC/TWWeather/TWWeather-Info.plist
+++ b/ClientAPIBOX/ObjectiveC/TWWeather/TWWeather-Info.plist
@@ -26,7 +26,7 @@
 	<true/>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	<key>NSMainNibFile</key>
-	<string>MainWindow</string>
+	<!-- <key>NSMainNibFile</key>
+	<string>MainWindow</string> -->
 </dict>
 </plist>
